# zfit2

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: automerge.yml  ci.yml
docs/: conf.py  index.md
src/zfit2/: __init__.py  diff.py  dist.py  func.py  func1.py  likelihood.py  models.py  parameter.py  sampling.py  statistic.py  valueholder.py  variable.py
src/zfit2/backend/: __init__.py  base.py  compile.py  context.py  errors.py  generalbackend.py  guide.txt  jax_backend.py  numpy.py  numpy_backend.py  optimize.py  sympy_backend.py  sympy_jit.py  vectorize.py
src/zfit2/data/: __init__.py  axis.py  histogram.py  jax_hist.py  unbinned.py  utils.py
src/zfit2/dims/: parameter.py  variable.py
src/zfit2/integration/: __init__.py  numerical.py  numerical.py.py  vegas.py  vegas.py.py
src/zfit2/interface/: dist.py  minimizer.py  result.py
src/zfit2/minimizer/: criterion.py
src/zfit2/statistic/: __init__.py  basestatistic.py  nll.py  options.py
src/zfit2/util/: __init__.py  collection.py  container.py  naming.py
tests/: conftest.py  test_func_base.py  test_jax_compatibility.py  test_likelihood.py  test_models.py  test_package.py  test_parameter.py  test_variable.py
tests/backend/: test_advanced_features_backend.py  test_backend_advanced.py  test_backend_basic_ops.py  test_backend_general.py  test_context_managers.py  test_jax_backend.py  test_linalg_ops.py  test_numpy_interface.py  test_random_ops.py
tests/data/: test_unbinned_data.py
tests/dims/: test_parameter.py  test_pytree_registration.py  test_variable.py
tests/statistic/: test_basestatistic.py  test_nll.py  test_nll_defaults.py  test_nll_full_parameter.py  test_nll_offset.py  test_nll_options_pytree.py  test_options.py  test_options_integration.py
tests/util/: test_util_collection.py  test_util_collection_integration.py
